Fixed the navbar collapse breakpoint

--- a/css/agency.css
+++ b/css/agency.css
@@ -1112,3 +1112,45 @@ iframe#map {
     frameborder: 0;
     border: 3px solid #fff;
 }
+
+.navbar-fixed-top .navbar-collapse,
+.navbar-fixed-bottom .navbar-collapse {
+  max-height: 404px;
+}
+
+/* Changing the navbar breakpoint (the screen size when burger appears) to 991px */
+
+@media (max-width: 991px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+		top: 0;
+		border-width: 0 0 1px;
+	}
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+		margin-top: 7.5px;
+	}
+	.navbar-nav>li {
+        float: none;
+    }
+
+    .collapse.in{
+  		display:block !important;
+	}
+
+}
